# encfspython-bin

./: .gitignore  CMakeLists.txt  monkeytest.py
csrc/: main.cc
exp/: requirements.txt
exp/mlperf-tr-imgcls/: exp.sh  imagenet_to_gcs.py
exp/mlperf-tr-imgcls/gramine_manifest/: encfspython.manifest.py39.toml
exp/mlperf-tr-imgseg/: enc.py  exp.sh  preprocess_dataset.py
exp/mlperf-tr-imgseg/gramine_manifest/: encfspython.manifest.py39.toml
exp/mlperf-tr-langmdl/cleanup_scripts/: create_pretraining_data.py  enc.py  enc2.py  exp.sh  tokenization.py
exp/mlperf-tr-langmdl/cleanup_scripts/gramine_manifest/: encfspython.manifest.py39.toml
exp/mlperf-tr-objdtc/: convert_cityscapes_to_coco.py  enc.py  exp.sh  instances2dict_with_polygons.py
exp/mlperf-tr-objdtc/gramine_manifest/: encfspython.manifest.py39.toml
exp/mlperf-tr-recomm/: .gitignore  data_utils.py  enc.py  exp.sh  test_framework_loading.sh  test_framework_loading_01.sh  test_framework_loading_pytorch.py  test_framework_loading_sklearn.py  test_framework_loading_tensorflow.py
exp/mlperf-tr-recomm/gramine_manifest/: Makefile  encfspython.manifest.py39.toml
exp/mlperf-tr-sphrcg/utils/: convert_librispeech.py  download_utils.py  enc.py  exp.sh  preprocessing_utils.py
exp/mlperf-tr-sphrcg/utils/gramine_manifest/: Makefile  encfspython.manifest.py39.toml
gramine_manifest/: encfspython.manifest.py39.toml
include/seccask/: encfs.h  util.h
test/: loop_exp.sh  monkeytest-exp.sh
